updated the project file

--- a/source.ipynb
+++ b/source.ipynb
@@ -65,11 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start your code here"
+    "# Start your code here\n",
+    "#What are the long-term trends in PC player playtime and engagement across different game genres?\n",
+    "#Multiplayer genres will show steady growth in engagement, while single-player genres will decline over time.\n",
+    "#Steam Charts, Kaggle Video Game Dataset, Steam Web API\n",
+    "#I will import and clean the datasets, then merge them using the Steam App ID\n",
+    "#  to link player counts, genres, and release data. After aggregating playtime by genre each year,\n",
+    "#  I’ll create visualizations such as line charts, bar charts, and heatmaps to reveal long-term engagement\n",
+    "#  trends. Finally, I’ll interpret the results to identify which genres are rising or declining\n",
+    "#  and what that means for the future of PC gaming."
    ]
   },
   {
