connected datasets, cleaned them and merged them

--- a/source.ipynb
+++ b/source.ipynb
@@ -74,10 +74,105 @@
     "#Multiplayer genres will show steady growth in engagement, while single-player genres will decline over time.\n",
     "#Steam Charts, Kaggle Video Game Dataset, Steam Web API\n",
     "#I will import and clean the datasets, then merge them using the Steam App ID\n",
-    "#  to link player counts, genres, and release data. After aggregating playtime by genre each year,\n",
-    "#  I’ll create visualizations such as line charts, bar charts, and heatmaps to reveal long-term engagement\n",
-    "#  trends. Finally, I’ll interpret the results to identify which genres are rising or declining\n",
-    "#  and what that means for the future of PC gaming."
+    "# to link player counts, genres, and release data. After aggregating playtime by genre each year,\n",
+    "# I’ll create visualizations such as line charts, bar charts, and heatmaps to reveal long-term engagement\n",
+    "# trends. Finally, I’ll interpret the results to identify which genres are rising or declining\n",
+    "# and what that means for the future of PC gaming.\n",
+    "#data sources\n",
+    "#https://www.kaggle.com/datasets/fronkongames/steam-games-dataset?resource=download\n",
+    "#https://steamcharts.com/app/730\n",
+    "#https://www.kaggle.com/datasets/nikdavis/steam-store-games\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"kaggle_videogames.csv\")\n",
+    "df2 = pd.read_csv(\"steam.csv\")\n",
+    "\n",
+    "url = \"https://steamcharts.com/app/730\"\n",
+    "page = requests.get(url)\n",
+    "soup = BeautifulSoup(page.text, \"html.parser\")\n",
+    "rows = soup.select(\"table.common-table tbody tr\")\n",
+    "data = []\n",
+    "for row in rows:\n",
+    "    cols = [col.text.strip() for col in row.find_all(\"td\")]\n",
+    "    data.append(cols)\n",
+    "\n",
+    "#cleaning kaggles_videogames.csv\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "missing = df.isnull().sum().sort_values(ascending=False)\n",
+    "print(missing.head(10))\n",
+    "df = df.dropna(subset=[\"Genres\", \"Average playtime forever\", \"Release date\"])\n",
+    "df = pd.DataFrame(data, columns=[\"Month\", \"Avg Players\", \"Gain\", \"Peak Players\"])\n",
+    "df[\"Avg Players\"] = df[\"Avg Players\"].str.replace(\",\", \"\").astype(float)\n",
+    "df[\"Release date\"] = pd.to_datetime(df[\"Release date\"], errors=\"coerce\")\n",
+    "df[\"Year\"] = df[\"Release date\"].dt.year\n",
+    "df[\"Average playtime forever\"] = pd.to_numeric(df[\"Average playtime forever\"], errors=\"coerce\")\n",
+    "df[\"Estimated owners\"] = pd.to_numeric(df[\"Estimated owners\"], errors=\"coerce\")\n",
+    "\n",
+    "#cleaning steam.csv\n",
+    "df2['release_date'] = pd.to_datetime(df2['release_date'], errors='coerce')\n",
+    "df2['price'] = pd.to_numeric(df2['price'], errors='coerce')\n",
+    "def owners_to_midpoint(value):\n",
+    "    if isinstance(value, str) and '-' in value:\n",
+    "        low, high = value.split('-')\n",
+    "        return (int(low) + int(high)) / 2\n",
+    "    return np.nan\n",
+    "\n",
+    "df2['owners'] = df2['owners'].apply(owners_to_midpoint)\n",
+    "for col in ['developer', 'publisher', 'genres', 'categories', 'platforms']:\n",
+    "    if col in df2.columns:\n",
+    "        df2[col] = df2[col].fillna(\"Unknown\")\n",
+    "\n",
+    "for col in ['positive_ratings', 'negative_ratings', 'average_playtime', 'price']:\n",
+    "    if col in df2.columns:\n",
+    "        df2[col] = df2[col].fillna(0)\n",
+    "\n",
+    "for col in ['genres', 'categories', 'platforms']:\n",
+    "    if col in df2.columns:\n",
+    "        df2[col] = df2[col].apply(lambda x: x.split(';')[0] if isinstance(x, str) else x)\n",
+    "\n",
+    "df2 = df2.drop_duplicates(subset=['appid'])\n",
+    "df2 = df2[df2['release_date'].notna()]\n",
+    "\n",
+    "#cleaning the scrapped page to easily merge the datasets\n",
+    "soup.rename(columns={'Game': 'Name'}, inplace=True)\n",
+    "soup['name'] = soup['name'].str.lower().str.strip()\n",
+    "\n",
+    "#combining datasets\n",
+    "combined_df = pd.merge(df, df2, on='name', how='outer', suffixes=('_steam', '_kaggle'))\n",
+    "combined_df = pd.merge(combined_df, soup, on='title', how='left')\n",
+    "\n",
+    "#viz 1\n",
+    "genre_players = combined_df.groupby('genres')['avg_players'].mean().reset_index().dropna()\n",
+    "plt.figure(figsize=(10,6))\n",
+    "sns.barplot(y='genres', x='avg_players', data=genre_players.sort_values('avg_players', ascending=False).head(10))\n",
+    "plt.title(\"Top 10 Game Genres by Average Players\")\n",
+    "plt.xlabel(\"Average Players\")\n",
+    "plt.ylabel(\"Genre\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "#Viz 2\n",
+    "combined_df['release_date'] = pd.to_datetime(df['release_date'], errors='coerce')\n",
+    "combined_df['year'] = df['release_date'].dt.year\n",
+    "yearly_players = df.groupby('year')['avg_players'].mean().reset_index().dropna()\n",
+    "plt.figure(figsize=(10,6))\n",
+    "sns.lineplot(x='year', y='avg_players', data=yearly_players, marker='o')\n",
+    "plt.title(\"Average Player Engagement Over Time\")\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Average Players\")\n",
+    "plt.grid(True, linestyle='--', alpha=0.5)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "\n"
    ]
   },
   {
