finished all vizualizations

--- a/source.ipynb
+++ b/source.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "#Viz 2\n",
     "combined_df['release_date'] = pd.to_datetime(df['release_date'], errors='coerce')\n",
-    "combined_df['year'] = df['release_date'].dt.year\n",
+    "combined_df['year'] = combined_df['release_date'].dt.year\n",
     "yearly_players = df.groupby('year')['avg_players'].mean().reset_index().dropna()\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.lineplot(x='year', y='avg_players', data=yearly_players, marker='o')\n",
@@ -172,7 +172,24 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "\n"
+    "#Viz 3\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.scatterplot(x='price', y='avg_players', data=combined_df, alpha=0.6)\n",
+    "plt.title(\"Price vs. Player Engagement\")\n",
+    "plt.xlabel(\"Game Price\")\n",
+    "plt.ylabel(\"Average Players\")\n",
+    "plt.grid(True, linestyle='--', alpha=0.5)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "#Viz 4\n",
+    "numeric_df = df.select_dtypes(include=['float64', 'int64']).dropna()\n",
+    "corr = numeric_df.corr()\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.heatmap(corr, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
+    "plt.title(\"Correlation Heatmap of Game Metrics\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
