made a sample to send to github

--- a/source.ipynb
+++ b/source.ipynb
@@ -91,9 +91,11 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
+    "#df = pd.read_csv(\"kaggle_videogames.csv\")\n",
     "\n",
-    "df = pd.read_csv(\"kaggle_videogames.csv\")\n",
     "df2 = pd.read_csv(\"steam.csv\")\n",
+    "\n",
+    "df = pd.read_csv(\"sample_videogames.csv\")\n",
     "\n",
     "url = \"https://steamcharts.com/app/730\"\n",
     "page = requests.get(url)\n",
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
