--- a/source.ipynb
+++ b/source.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# {Project Title}📝\n",
+    "# Steam Analysis📝\n",
     "\n",
     "![Banner](./assets/banner.jpeg)"
    ]
@@ -192,6 +192,15 @@
     "plt.title(\"Correlation Heatmap of Game Metrics\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For my project on the future of gaming using Steam data, I plan to use supervised machine learning—specifically regression models—to predict how popular a game will become based on features such as genre, tags, release year, developer, and price. Steam data presents several challenges, including missing values, skewed player counts, inconsistent categorical fields, and long-tail distributions where a small number of games dominate popularity. To address these challenges, I will use a full preprocessing pipeline with imputation for missing values, one-hot encoding for categorical variables, and scaling for numerical features. I will test multiple models, including Linear Regression, Decision Trees, KNN, and Random Forests, evaluating them using metrics like RMSE, MAE, and R².\n",
+    "\n",
+    "The machine learning workflow for this project follows the Ask-Prepare-Process-Analyze-Evaluate-Share framework. After performing exploratory data analysis to identify issues such as skewed distributions and missing fields, I split the data into training and test sets and built preprocessing pipelines using scikit-learn. I then will train several models through combined pipelines and compared their performance. Random Forest performed best, handling nonlinear relationships and large feature spaces more effectively than simpler models. From these results, I can identify trends that reflect the future of gaming: multiplayer, co-op, and action-oriented games consistently predict higher popularity, while trusted developers and more recent releases also play a significant role in long-term success on Steam."
    ]
   },
   {
